[gd_scene load_steps=9 format=3 uid="uid://dv6c0l3un2lwg"]

[ext_resource type="Script" path="res://kidsScene/cart.gd" id="1_5vqw7"]
[ext_resource type="Texture2D" uid="uid://db47wfadrd1qr" path="res://thesisProjectAssets/grocerybg.PNG" id="2_k3jmi"]
[ext_resource type="Texture2D" uid="uid://ceibx3d5tqfuy" path="res://thesisProjectAssets/parentsAssets/notificationCloud.PNG" id="3_2ii76"]
[ext_resource type="FontFile" uid="uid://dpkqwlvqf0myv" path="res://fonts/ShadowsIntoLight-Regular.ttf" id="3_q47tn"]
[ext_resource type="Texture2D" uid="uid://cgpmc1ibw8jfj" path="res://thesisProjectAssets/itemWeightNotification.PNG" id="4_vn38b"]
[ext_resource type="Texture2D" uid="uid://xhc0myjtua1u" path="res://thesisProjectAssets/parentsAssets/shopItems.png" id="5_3fi0g"]
[ext_resource type="Texture2D" uid="uid://bc140kj0n0yyr" path="res://thesisProjectAssets/checkout.PNG" id="6_7cwu1"]
[ext_resource type="Texture2D" uid="uid://c57fvygjcjdtd" path="res://thesisProjectAssets/removeFromCart.PNG" id="7_4ft4w"]

[node name="Node" type="Node"]
script = ExtResource("1_5vqw7")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.952941)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k3jmi")
expand_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = 124.0
offset_top = 61.0
offset_right = 576.0
offset_bottom = 142.0
theme_override_colors/font_color = Color(0.521569, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.439216, 0, 0.552941, 1)
theme_override_fonts/font = ExtResource("3_q47tn")
theme_override_font_sizes/font_size = 25
text = "Here is what you added in the cart"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 312.0
offset_top = 154.0
offset_right = 1261.0
offset_bottom = 535.0
scale = Vector2(0.602804, 0.941654)
columns = 4

[node name="Label3" type="Label" parent="."]
offset_left = 919.0
offset_top = 288.0
offset_right = 1084.0
offset_bottom = 330.0
scale = Vector2(1.07899, 1.10492)
theme_override_colors/font_color = Color(0.694118, 0.262745, 0.952941, 1)
theme_override_colors/font_shadow_color = Color(0.0901961, 0.0156863, 0.0313726, 1)
theme_override_fonts/font = ExtResource("3_q47tn")
theme_override_font_sizes/font_size = 15
text = "Something"
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
offset_left = 919.0
offset_top = 227.0
offset_right = 1084.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0.843137, 0.196078, 0.545098, 1)
theme_override_colors/font_shadow_color = Color(0.12549, 0.14902, 0.298039, 1)
theme_override_fonts/font = ExtResource("3_q47tn")
theme_override_font_sizes/font_size = 15
text = "Something"
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
offset_left = 4.0
offset_top = 290.0
offset_right = 270.0
offset_bottom = 475.0
texture = ExtResource("3_2ii76")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
offset_left = 28.0
offset_top = 126.0
offset_right = 294.0
offset_bottom = 311.0
texture = ExtResource("4_vn38b")
expand_mode = 1

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
anchors_preset = -1
anchor_bottom = 0.079
offset_left = 43.0
offset_top = 475.0
offset_right = 229.0
offset_bottom = 506.808
texture_normal = ExtResource("5_3fi0g")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 942.0
offset_top = 475.0
offset_right = 1094.0
offset_bottom = 584.0
texture_normal = ExtResource("6_7cwu1")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 522.0
offset_top = 532.0
offset_right = 666.0
offset_bottom = 604.0
texture_normal = ExtResource("7_4ft4w")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="TextureButton" to="." method="_on_shop_again_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_checkout_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_remove_cart_pressed"]
